--- a/PartyInvites/Content/sorryyoucantcome.html
+++ b/PartyInvites/Content/sorryyoucantcome.html
@@ -2,10 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Sorry you can't come!</title>
+    <link rel="stylesheet" href="../Content/PartyStyles.css" />
 </head>
 <body>
-    <h1>Sorry you can't come!</h1>
-    <p>It won't be the same without you. Maybe next year.</p>
+    <form id="rsvpform">
+        <h1>Sorry you can't come!</h1>
+        <p>It won't be the same without you. Maybe next year.</p>
+        <input type="button" value="See Who's Joining!" onclick="window.location.href='../pages/Summary.aspx'" />
+    </form>
+<div id="footer">
+  <div class="container text-center">
+    <div class="fnav">
+      <p>Copyright &copy; 2018 Jeffrey Moreland. Designed by BelgradeHeroes</p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
